# libx10

./: .gitignore  Makefile.am  README.md  configure.ac
src/: cm15a.c  example.c  libx10.c  libx10.h  libx10int.h  raw.c
src/erlang/: defines.h  erlx10.c  erlx10.erl
